update - updated to use latest api endpoints; dream theme to use soft delete
