# src/app/api/models/category-id-request.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface CategoryIdRequest {
+  id?: number;
+}
