# src/app/api/models/dream-category-dto.ts
@@ -3,4 +3,5 @@ export interface DreamCategoryDTO {
   categoryName?: string;
   description?: string;
   id?: number;
+  isActive?: boolean;
 }
