# src/app/api/services.ts
@@ -1,3 +1,4 @@
 export { AuthenticateService } from './services/authenticate.service';
-export { DreamService } from './services/dream.service';
+export { DreamCategoryService } from './services/dream-category.service';
+export { DreamDictionaryService } from './services/dream-dictionary.service';
 export { ProfileService } from './services/profile.service';
